# personnel-cli

./: Cargo.toml  LICENSE  README.md
resources/: test-report.html  test-template.xml  test.sqlite
src/: main.rs
