[package]
name = "personnel-cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# personnel-api
personnel-api = { version = "0.3", path = "../personnel-api" }
# CLI interface tool.
clap = { version = "4.0.18", features = ["derive"] }
